--- a/src/news.html
+++ b/src/news.html
@@ -23,7 +23,7 @@
       <section class="section section--breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb__item">Главная</li>
+            <li class="breadcrumb__item"><a href="/dist/">Главная</a></li>
             <li class="breadcrumb__item">Новости</li>
           </ul>
         </div>
@@ -138,6 +138,10 @@
           <li class="page-item"><a class="page-link" href="#">1</a></li>
           <li class="page-item"><a class="page-link" href="#">2</a></li>
           <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">4</a></li>
+          <li class="page-item"><a class="page-link" href="#">5</a></li>
+          <li class="page-item"><a class="page-link" href="#">6</a></li>
+          <li class="page-item"><a class="page-link" href="#">7</a></li>
           <li class="page-item">
             <a class="page-link" href="#" aria-label="Next">
               <span aria-hidden="true">&raquo;</span>
