--- a/src/contacts.html
+++ b/src/contacts.html
@@ -31,7 +31,7 @@
       <section class="section section--breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb__item">Главная</li>
+            <li class="breadcrumb__item"><a href="/dist/">Главная</a></li>
             <li class="breadcrumb__item">Контакты</li>
           </ul>
         </div>
@@ -283,6 +283,12 @@
             </tbody>
           </table>
         </div>
+      </section>
+
+      <section class="section section--link">
+        <a href="" class="section__link">Вернуться на главную</a>
+        <a href="" class="section__link">Перейти в каталог</a>
+        <a href="" class="section__link">Рассчитать проект</a>
       </section>
 
       @@include('html/footer.html')
