--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,8 @@
 <header class="header">
   <div class="container header__container">
-    <div class="header__logo"><img src="img/лого.png" alt="logo" /></div>
+    <div class="header__logo">
+      <a href="/dist/"><img src="img/лого.png" alt="logo" /></a>
+    </div>
 
     <button
       class="btn dropdown-toggle"
@@ -55,7 +57,7 @@
 <nav class="nav">
   <div class="container">
     <ul class="nav__list">
-      <li class="nav__item"><a href="/catalog">Каталог продукции</a></li>
+      <li class="nav__item"><a href="/dist/catalog">Каталог продукции</a></li>
       <li class="nav__item">
         <a href="">Наши проекты</a>
         <ul class="nav__list--2">
@@ -74,16 +76,18 @@
       <li class="nav__item"><a href="">Доставка и оплата</a></li>
       <li class="nav__item"><a href="">Гарантия</a></li>
       <li class="nav__item"><a href="">Партнёрам</a></li>
-      <li class="nav__item"><a href="">О компании</a></li>
+      <li class="nav__item"><a href="/dist/about.html">О компании</a></li>
       <li class="nav__item"><a href="">Отзывы</a></li>
-      <li class="nav__item"><a href="">Контакты</a></li>
+      <li class="nav__item"><a href="/dist/contacts">Контакты</a></li>
     </ul>
   </div>
 </nav>
 
 <div class="header--mobile">
   <div class="container header__container">
-    <div class="header__logo"><img src="img/лого.png" alt="logo" /></div>
+    <div class="header__logo">
+      <a href="#"><img src="img/лого.png" alt="logo" /></a>
+    </div>
     <div class="header__burger"><span></span></div>
   </div>
 </div>
