--- a/src/sertificaty.html
+++ b/src/sertificaty.html
@@ -31,8 +31,10 @@
       <section class="section section--breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb__item">Главная</li>
-            <li class="breadcrumb__item">О компании</li>
+            <li class="breadcrumb__item"><a href="/dist/">Главная</a></li>
+            <li class="breadcrumb__item">
+              <a href="/dist/about/">О компании</a>
+            </li>
             <li class="breadcrumb__item">Сертификаты и награды</li>
           </ul>
         </div>
@@ -65,7 +67,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-1.png"
                 >
-                  <img src="img/sertificaty/cert-1.png" alt="" />
+                  <img src="img/sertificaty/cert-1.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -73,7 +75,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-2.png"
                 >
-                  <img src="img/sertificaty/cert-2.png" alt="" />
+                  <img src="img/sertificaty/cert-2.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -81,7 +83,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-3.png"
                 >
-                  <img src="img/sertificaty/cert-3.png" alt="" />
+                  <img src="img/sertificaty/cert-3.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -89,7 +91,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-6.png"
                 >
-                  <img src="img/sertificaty/cert-6.png" alt="" />
+                  <img src="img/sertificaty/cert-6.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -97,7 +99,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-7.png"
                 >
-                  <img src="img/sertificaty/cert-7.png" alt="" />
+                  <img src="img/sertificaty/cert-7.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -105,7 +107,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-8.png"
                 >
-                  <img src="img/sertificaty/cert-8.png" alt="" />
+                  <img src="img/sertificaty/cert-8.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -113,7 +115,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-9.png"
                 >
-                  <img src="img/sertificaty/cert-9.png" alt="" />
+                  <img src="img/sertificaty/cert-9.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -121,15 +123,15 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-10.png"
                 >
-                  <img src="img/sertificaty/cert-10.png" alt="" />
+                  <img src="img/sertificaty/cert-10.png" alt="сертификат" />
                 </a>
               </div>
             </div>
             <div class="button-next">
-              <img src="img/arrow-next.png" alt="" />
+              <img src="img/arrow-next.png" alt="сертификат" />
             </div>
             <div class="button-prev">
-              <img src="img/arrow-prev.png" alt="" />
+              <img src="img/arrow-prev.png" alt="сертификат" />
             </div>
           </div>
           <div class="section__footer">
@@ -150,7 +152,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-1.png"
                 >
-                  <img src="img/sertificaty/cert-1.png" alt="" />
+                  <img src="img/sertificaty/cert-1.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -158,7 +160,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-2.png"
                 >
-                  <img src="img/sertificaty/cert-2.png" alt="" />
+                  <img src="img/sertificaty/cert-2.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -166,7 +168,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-3.png"
                 >
-                  <img src="img/sertificaty/cert-3.png" alt="" />
+                  <img src="img/sertificaty/cert-3.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -174,7 +176,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-6.png"
                 >
-                  <img src="img/sertificaty/cert-6.png" alt="" />
+                  <img src="img/sertificaty/cert-6.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -182,7 +184,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-7.png"
                 >
-                  <img src="img/sertificaty/cert-7.png" alt="" />
+                  <img src="img/sertificaty/cert-7.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -190,7 +192,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-8.png"
                 >
-                  <img src="img/sertificaty/cert-8.png" alt="" />
+                  <img src="img/sertificaty/cert-8.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -198,7 +200,7 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-9.png"
                 >
-                  <img src="img/sertificaty/cert-9.png" alt="" />
+                  <img src="img/sertificaty/cert-9.png" alt="сертификат" />
                 </a>
               </div>
               <div class="swiper-slide">
@@ -206,15 +208,15 @@
                   data-fancybox="gallery"
                   data-src="img/sertificaty/cert-10.png"
                 >
-                  <img src="img/sertificaty/cert-10.png" alt="" />
+                  <img src="img/sertificaty/cert-10.png" alt="сертификат" />
                 </a>
               </div>
             </div>
             <div class="button-next">
-              <img src="img/arrow-next.png" alt="" />
+              <img src="img/arrow-next.png" alt="сертификат" />
             </div>
             <div class="button-prev">
-              <img src="img/arrow-prev.png" alt="" />
+              <img src="img/arrow-prev.png" alt="сертификат" />
             </div>
           </div>
           <div class="section__footer">
@@ -231,23 +233,23 @@
           <div class="swiper section__slider section__slider--partners">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="img/partners/logo-rosseti.png" alt="" />
+                <img src="img/partners/logo-rosseti.png" alt="сертификат" />
               </div>
               <div class="swiper-slide">
-                <img src="img/partners/Логотип_ГК_ФСК.png" alt="" />
+                <img src="img/partners/Логотип_ГК_ФСК.png" alt="сертификат" />
               </div>
               <div class="swiper-slide">
-                <img src="img/partners/Росатом.svg.png" alt="" />
+                <img src="img/partners/Росатом.svg.png" alt="сертификат" />
               </div>
               <div class="swiper-slide">
-                <img src="img/partners/Росатом.svg.png" alt="" />
+                <img src="img/partners/Росатом.svg.png" alt="сертификат" />
               </div>
             </div>
             <div class="button-next">
-              <img src="img/arrow-next.png" alt="" />
+              <img src="img/arrow-next.png" alt="сертификат" />
             </div>
             <div class="button-prev">
-              <img src="img/arrow-prev.png" alt="" />
+              <img src="img/arrow-prev.png" alt="сертификат" />
             </div>
           </div>
         </div>
