--- a/src/catalog-3.html
+++ b/src/catalog-3.html
@@ -28,9 +28,9 @@
       <section class="section section--breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb__item"><a href="/dist/">Главная</a></li>
+            <li class="breadcrumb__item"><a href="/egoza/dist/">Главная</a></li>
             <li class="breadcrumb__item">
-              <a href="/dist/catalog/">Каталог продукции</a>
+              <a href="/egoza/dist/catalog/">Каталог продукции</a>
             </li>
             <li class="breadcrumb__item">
               <a href="#">Винтовые сваи шуруп</a>
