--- a/src/sertificaty.html
+++ b/src/sertificaty.html
@@ -31,7 +31,7 @@
       <section class="section section--breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb__item"><a href="/dist/">Главная</a></li>
+            <li class="breadcrumb__item"><a href="/egoza/dist/">Главная</a></li>
             <li class="breadcrumb__item">
               <a href="/dist/about/">О компании</a>
             </li>
