--- a/src/gallery.html
+++ b/src/gallery.html
@@ -31,9 +31,9 @@
       <section class="section section--breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb__item"><a href="/dist/">Главная</a></li>
+            <li class="breadcrumb__item"><a href="/egoza/dist/">Главная</a></li>
             <li class="breadcrumb__item">
-              <a href="/dist/about.html"></a> О компании
+              <a href="/egoza/dist/about.html"></a> О компании
             </li>
             <li class="breadcrumb__item">Галерея</li>
           </ul>
