--- a/src/html/header.html
+++ b/src/html/header.html
@@ -57,7 +57,9 @@
 <nav class="nav">
   <div class="container">
     <ul class="nav__list">
-      <li class="nav__item"><a href="/dist/catalog">Каталог продукции</a></li>
+      <li class="nav__item">
+        <a href="/egoza/dist/catalog">Каталог продукции</a>
+      </li>
       <li class="nav__item">
         <a href="">Наши проекты</a>
         <ul class="nav__list--2">
@@ -76,9 +78,9 @@
       <li class="nav__item"><a href="">Доставка и оплата</a></li>
       <li class="nav__item"><a href="">Гарантия</a></li>
       <li class="nav__item"><a href="">Партнёрам</a></li>
-      <li class="nav__item"><a href="/dist/about.html">О компании</a></li>
+      <li class="nav__item"><a href="/egoza/dist/about.html">О компании</a></li>
       <li class="nav__item"><a href="">Отзывы</a></li>
-      <li class="nav__item"><a href="/dist/contacts">Контакты</a></li>
+      <li class="nav__item"><a href="/egoza/dist/contacts">Контакты</a></li>
     </ul>
   </div>
 </nav>
@@ -86,7 +88,7 @@
 <div class="header--mobile">
   <div class="container header__container">
     <div class="header__logo">
-      <a href="#"><img src="img/лого.png" alt="logo" /></a>
+      <a href="/egoza/dist/"><img src="img/лого.png" alt="logo" /></a>
     </div>
     <div class="header__burger"><span></span></div>
   </div>
@@ -118,9 +120,9 @@
       <li class="menu__item"><a href="">Доставка и оплата</a></li>
       <li class="menu__item"><a href="">Гарантия</a></li>
       <li class="menu__item"><a href="">Партнёрам</a></li>
-      <li class="menu__item"><a href="">О компании</a></li>
+      <li class="menu__item"><a href="/egoza/dist/about">О компании</a></li>
       <li class="menu__item"><a href="">Отзывы</a></li>
-      <li class="menu__item"><a href="">Контакты</a></li>
+      <li class="menu__item"><a href="/egoza/dist/contacts">Контакты</a></li>
     </ul>
     <button
       class="btn dropdown-toggle mt-4"
