--- a/src/news-2.html
+++ b/src/news-2.html
@@ -31,11 +31,13 @@
       <section class="section section--breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb__item"><a href="/dist/">Главная</a></li>
+            <li class="breadcrumb__item"><a href="/egoza/dist/">Главная</a></li>
             <li class="breadcrumb__item">
-              <a href="/dist/about/">О компании</a>
+              <a href="/egoza/dist/about/">О компании</a>
             </li>
-            <li class="breadcrumb__item"><a href="/dist/news/">Новости</a></li>
+            <li class="breadcrumb__item">
+              <a href="/egoza/dist/news/">Новости</a>
+            </li>
             <li class="breadcrumb__item">
               «Русская стратегия» на 27-ой Международной выставке Securika
               Moscow 2022
